# operation_center

./: .gitignore  Cargo.toml  data.db  package-lock.json  value.yml
config/: config.toml
doc/: api-doc.md  api-spec.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  mockInit.js  mockService.js
migration/src/: lib.rs  m20250616_094640_create_subtask_messageinfo.rs  m20250616_100023_create_main_task_messageinfo.rs
src/: main.rs
src/config/: settings.rs
src/entity/: main_task_messageinfo.rs  mod.rs  subtask_messageinfo.rs
src/handlers/: main_task_handler.rs  mod.rs  subtask_handler.rs  update_handler.rs
src/models/: task_model.rs
src/routes/: command.rs  instanll.rs  maintask.rs  mod.rs  path_exposure.rs  subtask.rs  update.rs
src/utils/: id_generator.rs  mod.rs  web_error.rs
